# score-vfx-particles

./: CMakeLists.txt  README.md  addon.json  release.sh  score_addon_particles.cpp  score_addon_particles.hpp
particles/: Executor.cpp  Executor.hpp  Layer.hpp  Loadmesh.cpp  Loadmesh.h  MeshParticles.cpp  MeshParticles.hpp  Metadata.hpp  Node.cpp  Node.hpp  Process.cpp  Process.hpp  Renderer.cpp  Renderer.hpp
